[css] fix separator on mobile

--- a/src/assets/stylesheets/layout/_nav.scss
+++ b/src/assets/stylesheets/layout/_nav.scss
@@ -64,6 +64,10 @@
     &:first-child {
       margin-top: 8px;
     }
+    
+    @include break-to-device(tablet) {
+      display: none;
+    }
   }
   
   // List item
